--- a/SampleWebAPI/Web.config
+++ b/SampleWebAPI/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -14,9 +14,8 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <add name="SavingsDB" connectionString="Server=tcp:ikhaleelahamed.database.windows.net,1433;Initial Catalog=WelcomeDB;Persist Security Info=False;User ID=ikhaleelahamed;Password=12Register@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-    <add name="SavingsDBContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SavingsDBContext-20181030101725; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SavingsDBContext-20181030101725.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="SavingsDB" connectionString="Server=tcp:ikhaleelahamed.database.windows.net,1433;Initial Catalog=WelcomeDB;Persist Security Info=False;User ID=XXXXXXXXX;Password=XXXXXXXXX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="SavingsDBContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SavingsDBContext-20181030101725; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SavingsDBContext-20181030101725.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
@@ -39,6 +38,18 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.8.1.0" newVersion="4.8.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
