--- a/SampleWebAPI/Web.config
+++ b/SampleWebAPI/Web.config
@@ -14,7 +14,7 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <add name="SavingsDB" connectionString="Server=tcp:ikhaleelahamed.database.windows.net,1433;Initial Catalog=WelcomeDB;Persist Security Info=False;User ID=ikhaleelahamed;Password=12Register@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="SavingsDB" connectionString="Server=tcp:ikhaleelahamed.database.windows.net,1433;Initial Catalog=WelcomeDB;Persist Security Info=False;User ID=XXXXXXXX;Password=XXXXXXXXXX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
     <add name="SavingsDBContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SavingsDBContext-20181030101725; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SavingsDBContext-20181030101725.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
